--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@
 
 ### macOS ###
 # General
-.DS_Store
-.AppleDouble
-.LSOverride
-.idea
-.vscode
+*.DS_Store
+*.AppleDouble
+*.LSOverride
+*.idea
+*.vscode
 
 # Icon must end with two \r
 Icon
