--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.13",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
