--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^0.21.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "debug": "^4.3.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
@@ -32,6 +34,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "http-status-codes": "^2.1.4",
+    "js-beautify": "^1.13.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
@@ -39,7 +42,8 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prettyjson": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
