--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://lanceworth15:cactusjack@module3.m2r86.mongodb.net/project_4?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://root:root@chetanmongodb.h1yok.gcp.mongodb.net/project_demo?retryWrites=true&w=majority
